--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- do we need this here -->
+    <script src="https://unpkg.com/axios/dist/axios.js"></script> 
+
     <meta
       name="description"
       content="Web site created using create-react-app"
