--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- do we need this here -->
+     <!-- consider removing this when the parse is done -->
     <script src="https://unpkg.com/axios/dist/axios.js"></script> 
 
     <meta
